--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
   "name": "@krazylabs/eslint-config",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "description": "Shared lint config",
   "main": "index.js",
   "scripts": {},
   "author": "Sean Timm",
   "license": "ISC",
-  "peerDependencies": {
-    "eslint": ">=7.22.0",
-    "prettier": ">=2.4.1"
-  },
   "dependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-config-standard-react": "^11.0.1",
-    "eslint-plugin-flowtype": "^6.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "@babel/eslint-parser": "7.18.9",
+    "eslint": "8.21.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.2.4",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.30.1"
   }
 }
